--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,11 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Comfortaa&family=Rubik:wght@300;400;500;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Comfortaa&family=Rubik:wght@300;400;500;600;700&family=Yeseva+One&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <header class="header">
     <div class="container header__inner">
@@ -50,7 +54,22 @@
       <a href="tel:+4565789876" class="phone">+45 65 78 98 76</a>
     </div>
   </header>
-
+  <main class="main">
+    <section class="top">
+      <div class="container top__inner">
+        <div class="top__content">
+          <h3 class="top__title">Створіть атмосферу затишку та гармонії!</h3>
+          <p class="top__text">Створіть особливу атмосферу у своєму домі з нашою екологічно чистою та якісною продукцією
+            зі 100% натуральної соєвого воску.</p>
+          <button class="top__buy">Купити</button>
+        </div>
+        <!-- <picture> - for responsive images. -->
+        <picture class="top__img">
+          <img class="top__img-l" src="/images/top-l.png" alt="candle images">
+        </picture>
+      </div>
+    </section>
+  </main>
   <footer class="footer">
     <div class="container footer__inner">
       <a href="#" class="logo">
@@ -109,4 +128,5 @@
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
