--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         </div>
         <!-- <picture> - for responsive images. -->
         <picture class="top__img">
+          <source srcset="/images/s.png" media="(max-width: 380px)">
           <source srcset="/images/top-m.png" media="(max-width: 480px)">
-          <source srcset="images/s.png" media="(max-width: 380px)">
           <img class="top__img-l" src="/images/top-l.png" alt="candle images">
         </picture>
       </div>
