--- a/index.html
+++ b/index.html
@@ -1,134 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Candle</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Comfortaa&family=Rubik:wght@300;400;500;600;700&family=Yeseva+One&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Candle</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Comfortaa&family=Rubik:wght@300;400;500;600;700&family=Yeseva+One&display=swap"
-    rel="stylesheet">
-</head>
-
-<body>
-  <header class="header">
-    <div class="container header__inner">
-      <a href="#" class="logo">
-        <img src="images/logo.svg" alt="logo image">
-      </a>
-      <nav class="menu header__menu">
-        <button class="menu__btn">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-        <ul class="menu__list header__menu-list">
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Про нас</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Каталог</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Команда</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Відгуки</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Курси</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <a href="tel:+4565789876" class="phone">+45 65 78 98 76</a>
-    </div>
-  </header>
-  <main class="main">
-    <section class="top">
-      <div class="container top__inner">
-        <div class="top__content">
-          <h3 class="top__title">Створіть атмосферу затишку та гармонії!</h3>
-          <p class="top__text">Створіть особливу атмосферу у своєму домі з нашою екологічно чистою та якісною продукцією
-            зі 100% натуральної соєвого воску.</p>
-          <button class="top__buy">Купити</button>
+  <body>
+    <header class="header">
+      <div class="container header__inner">
+        <a href="#" class="logo">
+          <img src="images/logo.svg" alt="logo image" />
+        </a>
+        <nav class="menu header__menu">
+          <button class="menu__btn">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <ul class="menu__list header__menu-list">
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Про нас</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Каталог</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Команда</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Відгуки</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Курси</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="tel:+4565789876" class="phone">+45 65 78 98 76</a>
+      </div>
+    </header>
+    <main class="main">
+      <section class="top">
+        <div class="container top__inner">
+          <div class="top__content">
+            <h3 class="top__title">Створіть атмосферу затишку та гармонії!</h3>
+            <p class="top__text">
+              Створіть особливу атмосферу у своєму домі з нашою екологічно
+              чистою та якісною продукцією зі 100% натуральної соєвого воску.
+            </p>
+            <button class="top__buy">Купити</button>
+          </div>
+          <!-- <picture> - for responsive images. -->
+          <picture class="top__img">
+            <source srcset="/images/s.png" media="(max-width: 380px)" />
+            <source srcset="/images/top-m.png" media="(max-width: 480px)" />
+            <img
+              class="top__img-l"
+              src="/images/top-l.png"
+              alt="candle images"
+            />
+          </picture>
         </div>
-        <!-- <picture> - for responsive images. -->
-        <picture class="top__img">
-          <source srcset="/images/s.png" media="(max-width: 380px)">
-          <source srcset="/images/top-m.png" media="(max-width: 480px)">
-          <img class="top__img-l" src="/images/top-l.png" alt="candle images">
-        </picture>
+      </section>
+      <section class="about">
+        <div class="container about__inner">
+            <div class="about__content">
+              <h2 class="about__title">Про нас</h2>
+              <p class="about__text">
+                Богдан творець бренду який завжди зацікавлений у виготовленні
+                різноманітних речей вдома. Він регулярно експериментував з
+                різними матеріалами та інструментами, спробувавши свої сили у
+                багатьох галузях, включаючи виготовлення свічок.
+              </p>
+              <p class="about__text">
+                Соєвий віск виготовляють із соєвих бобів, що зрощуються в
+                Данії, і цей вид воску є екологічно чистим та безпечним для
+                здоров'я.
+              </p>
+            </div>
+            <ul class="about__list ">
+              <li class="about__item">
+                <img src="images/about-first.png" alt="" class="about__item-img">
+                <p class="about__item-text">Насолоджуйся моментом</p>
+              </li>
+              <li class="about__item">
+                <img src="images/about-second.png" alt="" class="about__item-img">
+                <p class="about__item-text">Створіть улюблену атмосферу</p>
+              </li>
+              <li class="about__item">
+                <img src="images/about-third.jpg" alt="" class="about__item-img">
+                <p class="about__item-text">Виготовлені з любов'ю</p>
+              </li>
+            </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container footer__inner">
+        <a href="#" class="logo">
+          <img src="images/logo.svg" alt="logo image" />
+        </a>
+        <nav class="menu footer__menu">
+          <ul class="menu__list footer__menu-list">
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Про нас</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Каталог</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Команда</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Відгуки</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Курси</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__contacts">
+          <a href="tel:+4565789876" class="footer__phone">+45 65 78 98 76</a>
+          <a href="mailto:candelsCandels@gmail.com" class="email"
+            >candelsCandels@gmail.com</a
+          >
+          <ul class="footer__social">
+            <li class="footer__social-item">
+              <a href="#" class="footer__social-link">
+                <img
+                  src="/images/facebook.svg"
+                  alt="facebook"
+                  class="footer__social-image"
+                />
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a href="#" class="footer__social-link">
+                <img
+                  src="/images/instagram.svg"
+                  alt="instagram"
+                  class="footer__social-image"
+                />
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a href="#" class="footer__social-link">
+                <img
+                  src="/images/linkedin.svg"
+                  alt="linkedin"
+                  class="footer__social-image"
+                />
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a href="#" class="footer__social-link">
+                <img
+                  src="/images/youtube.svg"
+                  alt="youtube"
+                  class="footer__social-image"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="container footer__inner">
-      <a href="#" class="logo">
-        <img src="images/logo.svg" alt="logo image">
-      </a>
-      <nav class="menu footer__menu">
-        <ul class="menu__list footer__menu-list">
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Про нас</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Каталог</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Команда</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Відгуки</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Курси</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="footer__contacts">
-        <a href="tel:+4565789876" class="footer__phone">+45 65 78 98 76</a>
-        <a href="mailto:candelsCandels@gmail.com" class="email">candelsCandels@gmail.com</a>
-        <ul class="footer__social">
-          <li class="footer__social-item">
-            <a href="#" class="footer__social-link">
-              <img src="/images/facebook.svg" alt="facebook" class="footer__social-image">
-            </a>
-          </li>
-          <li class="footer__social-item">
-            <a href="#" class="footer__social-link">
-              <img src="/images/instagram.svg" alt="instagram" class="footer__social-image">
-            </a>
-          </li>
-          <li class="footer__social-item">
-            <a href="#" class="footer__social-link">
-              <img src="/images/linkedin.svg" alt="linkedin" class="footer__social-image">
-            </a>
-          </li>
-          <li class="footer__social-item">
-            <a href="#" class="footer__social-link">
-              <img src="/images/youtube.svg" alt="youtube" class="footer__social-image">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
-  <script src="js/main.js"></script>
-</body>
-
+    <script src="js/main.js"></script>
+  </body>
 </html>
